--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.5.0",
     "react-photo-view": "^1.2.7",
     "react-router": "^7.6.2",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
