--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dom": "^0.0.3",
     "i18next": "^25.2.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.517.0",
     "react": "^19.1.0",
     "react-country-region-selector": "^4.0.2",
     "react-dom": "^19.1.0",
@@ -25,8 +26,8 @@
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.8.1",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
