--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-images-uploading": "^3.1.7",
     "react-photo-view": "^1.2.7",
     "react-router": "^7.6.2",
