--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-photo-view": "^1.2.7",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
+    "react-split": "^2.0.14",
     "react-tsparticles": "^2.12.2",
+    "split.js": "^1.6.5",
     "swiper": "^11.2.8",
     "tsparticles": "^3.8.1"
   },
