--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "@stomp/stompjs": "^7.1.1",
+    "animejs": "^4.0.2",
     "axios": "^1.9.0",
     "dom": "^0.0.3",
     "i18next": "^25.2.1",
