--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-photo-view": "^1.2.7",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "react-split": "^2.0.14",
     "react-tsparticles": "^2.12.2",
     "sockjs-client": "^1.6.1",
