--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
+    "react-confirm-alert": "^3.0.6",
     "react-country-region-selector": "^4.0.2",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
@@ -27,6 +28,7 @@
     "react-image-crop": "^11.0.10",
     "react-images-uploading": "^3.1.7",
     "react-photo-view": "^1.2.7",
+    "react-promptify": "^0.3.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
