--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ dist-ssr
 public/videos/Sequence 01.mp4
 public/videos/Sequence 01.mp4
 public/videos/Sequence 01.mp4
+
+.env.production
+.env.development
