--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-images-uploading": "^3.1.7",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-photo-view": "^1.2.7",
     "react-promptify": "^0.3.0",
     "react-router": "^7.6.2",
