--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-oauth/google": "^0.12.2",
     "@stomp/stompjs": "^7.1.1",
     "animejs": "^4.0.2",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "dom": "^0.0.3",
     "i18next": "^25.2.1",
     "jwt-decode": "^4.0.0",
